[gd_scene load_steps=2 format=3 uid="uid://cvyds7w8b73bf"]

[ext_resource type="Script" path="res://Scripts/Useful/Life_Module.gd" id="1_rcn81"]

[node name="Life_Module" type="Node2D"]
process_mode = 3
script = ExtResource("1_rcn81")

[connection signal="heal" from="." to="." method="_on_heal"]
[connection signal="take_damage" from="." to="." method="_on_take_damage"]
